[gd_scene load_steps=5 format=3 uid="uid://djths2blh8y0a"]

[ext_resource type="Script" uid="uid://dgx2p3kt24vbn" path="res://ui/menu/pause_menu.gd" id="1_avurv"]
[ext_resource type="Texture2D" uid="uid://dl6kuj1xhnmaw" path="res://assets/ui/menu_background.png" id="2_npydk"]
[ext_resource type="Texture2D" uid="uid://juc273gfppqs" path="res://assets/ui/RESUME_final.png" id="3_kk7rk"]
[ext_resource type="Texture2D" uid="uid://cih8d4frvfi2o" path="res://assets/ui/MENU_final.png" id="4_kk7rk"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_avurv")

[node name="Panel" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_npydk")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -255.5
offset_top = -388.0
offset_right = 256.5
offset_bottom = 388.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 72
alignment = 1

[node name="ResumeBtn" type="TextureButton" parent="Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture_normal = ExtResource("3_kk7rk")
stretch_mode = 0

[node name="MenuBtn" type="TextureButton" parent="Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture_normal = ExtResource("4_kk7rk")
stretch_mode = 0

[connection signal="pressed" from="Panel/VBoxContainer/ResumeBtn" to="." method="_on_resume_btn_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/MenuBtn" to="." method="_on_menu_btn_pressed"]
